# aegis

./: .gitignore  PROMPT_LOG.md  README.md  TECHNICAL_DECISIONS.md  pyproject.toml
app/: main.py
app/api/: aeo.py  fanout.py
app/models/: schemas.py
app/services/: content_parser.py  fanout_engine.py  gap_analyzer.py
app/services/aeo_checks/: base.py  direct_answer.py  htag_hierarchy.py  readability.py
tests/: test_direct_answer.py  test_fanout_parsing.py  test_htag_hierarchy.py  test_readability.py
