[project]
name = "aegis"
version = "0.1.0"
description = "AEGIS — Answer Engine & Generative Intelligence Suite"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "beautifulsoup4",
    "spacy",
    "textstat",
    "sentence-transformers",
    "torch",
    "openai>=1.0",
    "pydantic>=2.0",
    "tenacity",
    "numpy",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
